# rust_prism

./: .gitignore  Cargo.toml  build.rs  pbj_file.md  scene_file.md
embree/: Cargo.toml  build.rs  temp.rs
embree/src/: embree_impl.rs  lib.rs
math/: Cargo.toml
math/src/: matrix.rs  numbers.rs  ray.rs  sampling.rs  vector.rs
pmath/: Cargo.toml
pmath/src/: bbox.rs  lib.rs  quaternion.rs  ray.rs  vector.rs
pmj/: Cargo.toml  LICENSE
pmj/src/: lib.rs
rply/: Cargo.toml  build.rs  temp.rs
rply/src/: lib.rs
rust_prism/: Cargo.toml  README.md
rust_prism/src/: bvh.rs  embree.rs  filter.rs  integrator.rs  interaction.rs  main.rs  mesh.rs  sampler.rs  scene.rs  scripting.rs  spectrum.rs  threading.rs  transform.rs
rust_prism/src/camera/: mod.rs  perspective.rs
rust_prism/src/fileio/: mod.rs  ply.rs
rust_prism/src/film/: mod.rs  png.rs
rust_prism/src/geometry/: mesh.rs  mod.rs  sphere.rs
rust_prism/src/integrator/: mod.rs  normal.rs  path_tracer.rs
rust_prism/src/light/: many_lights.rs  mod.rs  point.rs
rust_prism/src/light/area/: diffuse.rs  mod.rs
rust_prism/src/light/light_picker/: mod.rs  uniform_all.rs  uniform_one.rs
rust_prism/src/math/: mod.rs  ray.rs  sampling.rs  util.rs
rust_prism/src/shading/: mod.rs
rust_prism/src/shading/lobe/: lambertian.rs  microfacet.rs  mod.rs  specular.rs
rust_prism/src/shading/material/: matte.rs  mod.rs  plastic.rs
src/: alloc.rs  bvh.rs  device.rs  film.rs  filter.rs  main.rs  mem.rs  memory.rs  mesh.rs  pixel_buffer.rs  sampler.rs  scene.rs  spectrum.rs  thread.rs  threading.rs  threadpool.rs  transform.rs  util.rs
src/aggregate/: mod.rs
src/camera/: mod.rs  perspective.rs
src/file_io/: mod.rs  ply.rs  ply_bak.rs
src/film/: mod.rs
src/film/pixel/: beauty.rs  mod.rs
src/film/tile_schedular/: linear.rs  mod.rs
src/geometry/: bvh.rs  bvh_object.rs  mesh.rs  mesh_bvh.rs  mesh_geometry.rs  mod.rs  ply.rs  sphere.rs  sphere_desc.rs
src/geometry/loader/: mod.rs  ply.rs
src/integrator/: direct_light.rs  mod.rs  util.rs
src/light/: mod.rs  point.rs
src/light/area/: diffuse.rs  mod.rs
src/loading/: ply.rs
src/math/: bbox.rs  matrix.rs  mod.rs  numbers.rs  quaternion.rs  random.rs  ray.rs  sampling.rs  transform.rs  util.rs  vector.rs
src/memory/: alloc.rs  allocators.rs  mod.rs  stack_alloc.rs  util.rs
src/sampler/: mod.rs  stratified.rs  zero_two.rs
src/scene/: mod.rs  scene_builder.rs
src/scene_loading/: geometry.rs  mod.rs  transform.rs
src/shading/bxdf/: lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  specular.rs
src/shading/lobe/: lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  specular.rs
src/shading/material/: matte.rs  mod.rs
src/transform/: animated_transform.rs  mod.rs  static_transform.rs
