[package]
name = "prism"
version = "0.1.0"
authors = ["Dennis van Ee <dennis@vanee.us>"]
edition = "2018"

[dependencies]
# Used all over the place for math and whatnot:
num-traits = "0.2.11"
# Used to load PLY files:
ply-rs = "0.1.2"
# Used for parsing JSON scene description files:
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"

simple-error = "0.2.1"
bitflags = "1.2.1"
arrayvec = "0.5.1"
bumpalo = "3.2.0"

# These are needed because rust doesn't have an implace partition
# function or nth_element (in stable) function that I am aware of:
order-stat = "0.1.3"
partition = "0.1.1"