[package]
name = "prism"
version = "0.1.0"
authors = ["Dennis van Ee <dennis@vanee.us>"]
edition = "2018"

[dependencies]
# Couldn't find a rust ply crate that did what I wanted, so I just wrapped it around RPLY:
rply = { git = "https://github.com/DennisVanEe/rply-prism.git" }
# For the main ray-intersection stuff:
embree = { git = "https://github.com/DennisVanEe/embree-prism.git" }

# Used all over the place for math and whatnot:
num-traits = "0.2.11"

# Other stuff that is useful:
simple-error = "0.2.1"
bitflags = "1.2.1"
arrayvec = "0.5.1"
bumpalo = "3.2.1"

# These are needed because rust doesn't have an implace partition
# function or nth_element (in stable) function that I am aware of:
order-stat = "0.1.3"
partition = "0.1.1"
