[package]
authors = ["Dennis van Ee <dennis@vanee.us>"]
edition = "2018"
name = "prism"
version = "0.1.0"

[dependencies]
pmath = {path = "../pmath"}
pmj = {path = "../pmj"}
rply = {path = "../rply"}

# Used all over the place for math and whatnot:
num-traits = "0.2.14"

# The scripting system used by prism:
rhai = "0.19.3"

# Other stuff that is useful:
array-init = "1.0.0"
arrayvec = "0.5.2"
bitflags = "1.2.1"
bumpalo = "3.4.0"
core_affinity = "0.5.10"
crossbeam = "0.8.0"
lazy_static = "1.4.0"
lodepng = "3.0.0"
once_cell = "1.4.1"
rand = "0.7.3"
rand_pcg = "0.2.1"
simple-error = "0.2.2"

# These are needed because rust doesn't have an implace partition
# function or nth_element (in stable) function that I am aware of:
order-stat = "0.1.3"
partition = "0.1.1"

[profile.dev]
debug = true
incremental = true
opt-level = 0

[profile.release]
debug = true # This is for profiling
incremental = false 
opt-level = 3 
target-cpu = "native"
